# PotatoStandardLibrary

./: .clangd  .gitignore  CMakelists.txt  README.md  TODOs.md
Core/: CMakelists.txt  Core.h  buffer.h  common.h  delegate.h  enum_flag.h  exception_handler.h  logger.h  math.h  mpmc_queue.h  platform.h  std_interface.h  string.h  time.h
Core/Containers/: buffer.h  mpmc_queue.h  observed.h  radix_tree.h
Core/Delegate/: delegatebase.h
Core/Diagnostics/: exception_handler.h  logger.h
Core/Foundation/: enum_flag.h  std_interface.h
Core/Include/: observed.h
Core/Math/: math.h
Core/Memory/: CMakeLists.txt  FreeList.h  Span.h  allocation_context.h  allocation_pipeline.h  central_pool.h  memory_common.h  memory_facade.h  readme.md  thread_cache.h  virtual_memory_backend.h
Core/Memory/Observability/: memory_leak_detector.h  memory_observability.h  memory_statistics.h  memory_tracker.h  new_malloc_tracker.cpp  new_malloc_tracker.h
Core/Text/: string.h
PerfBench/: CMakeLists.txt  MemoryAllocatorBenchmark.cpp
PotatoStandard/: CMakelists.txt
PotatoStandard/Include/: Observable.h
Test/: BufferTest.cpp  CMakeLists.txt  CoreHeaderSmokeTest.cpp  DelegateTest.cpp  LoggerTest.cpp  MemoryAllocatorTest.cpp  ObservableTest.cpp
build_bench_timing/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CTestTestfile.cmake  Continuous.vcxproj  Continuous.vcxproj.filters  DartConfiguration.tcl  Experimental.vcxproj  Experimental.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  Nightly.vcxproj  Nightly.vcxproj.filters  NightlyMemoryCheck.vcxproj  NightlyMemoryCheck.vcxproj.filters  PotatoStandardLibrary.slnx  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters
build_bench_timing/Core/: INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters
build_bench_timing/PerfBench/: INSTALL.vcxproj  INSTALL.vcxproj.filters  MemoryAllocatorBenchmark.vcxproj  MemoryAllocatorBenchmark.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters
build_bench_timing/Test/: BufferTest_cpp.vcxproj  BufferTest_cpp.vcxproj.filters  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  LoggerTest_cpp.vcxproj  LoggerTest_cpp.vcxproj.filters  MemoryAllocatorTest_cpp.vcxproj  MemoryAllocatorTest_cpp.vcxproj.filters  ObservableTest_cpp.vcxproj  ObservableTest_cpp.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters
build_bench_timing/benchmark/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  (+7 more)
(+28 files in other folders)
